去除底部调试栏

--- a/index.html
+++ b/index.html
@@ -855,9 +855,9 @@ $(document).ready(function(){
  
 </head> 
 <body> 
-    <div id="statusBar"> 
+    <!-- <div id="statusBar"> 
         Time: <span id="current-time"></span> | Frame rate: <span id="frameRate">NaN</span> | Created by <a href="http://aleksandarrodic.com">Aleksandar Rodic</a> using <a href="http://en.wikipedia.org/wiki/WebGL">WebGL</a>. Special thanks to <a href="http://learningwebgl.com/blog/">Giles Thomas</a> | debug console: <a href="javascript:toggleConsole()"><b>[+]</b></a> 
-    </div> 
+    </div>  -->
     <div id="console"> 
         <div class="console-field" id="debugCamera"> 
             <b>camera</b> 
