--- a/index.html
+++ b/index.html
@@ -996,7 +996,7 @@ $(document).ready(function(){
         ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
         var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
       })();
-
+      console.clear();
     </script>
 
 </body> 
